# ChangeLog for dev-java/batik
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/batik/ChangeLog,v 1.54 2008/01/20 22:27:27 caster Exp $

  05 Jan 2009; Mike Weissman <mike@weisso.com> batik-1.7.ebuild:
  revised batik-1.7.ebuild as per bug#200851 does not require jdk-1.4

  20 Jan 2008; Vlastimil Babka <caster@gentoo.org> -batik-1.5-r1.ebuild,
  batik-1.6-r3.ebuild:
  Remove security vulnerable 1.5 (bug #206651) as it turned out nothing
  depends on it anymore. Fix quoting and don't dodoc LICENSE in 1.6.

  15 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> -batik-1.6-r1.ebuild,
  -batik-1.6-r2.ebuild:
  Delete old revisions.

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> batik-1.6-r3.ebuild:
  amd64 stable wrt #195048, thanks to Kenneth Prugh for testing.

  12 Oct 2007; Lars Weiler <pylon@gentoo.org> batik-1.6-r3.ebuild:
  stable ppc, bug #195048

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org> batik-1.6-r3.ebuild:
  stable x86, bug 195048

  08 May 2007; Raúl Porcel <armin76@gentoo.org> batik-1.6-r3.ebuild:
  Add ~ia64 wrt #177466

  14 Feb 2007; Markus Rothe <corsair@gentoo.org> batik-1.5-r1.ebuild:
  Added ~ppc64

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> batik-1.6-r3.ebuild:
  Added ~ppc64; bug #153229

  03 Feb 2007; nixnut <nixnut@gentoo.org> batik-1.5-r1.ebuild:
  Stable on ppc wrt bug 154185

  14 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> batik-1.6-r3.ebuild:
  Made jython dependency optional with the python use flag and added a tcl use
  flag.

  14 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> -batik-1.5.1-r5.ebuild:
  Removed 1.5.1 slot because nothing is using it.

*batik-1.6-r3 (08 Jan 2007)

  08 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  +files/batik-1.6-dont-copy-deps.patch, batik-1.5.1-r5.ebuild,
  +batik-1.6-r3.ebuild:
  Fix javadoc install location wrt bug #160835 by Alistair Bush