@@ -1,4 +1,4 @@
 DIST batik-src-1.7.zip 15060504 RMD160 aba34d2e0cecf56ef3c79447bbaae2575c4933a1 SHA1 806f57b0200cc755903c2f6f55463f0dd5f6f7d6 SHA256 6bea593543a797561fa83651764e40b1b0ce01c1df21ab0359ade58e967379fd
-EBUILD batik-1.7.ebuild 2090 RMD160 babfb6c0778fbf72c40f2fac2910b9ad21f6d7cc SHA1 c481ad4d99c985508465b485c16ae3bce4413ecf SHA256 52a9365e4080f0904f69effcc53bbaaa168ba4927d1b412252b89fc92d491d6f
-MISC ChangeLog 7452 RMD160 ba3cdad31e18d3103365d1ff167127d19b6ee50d SHA1 6038c342b4dfd57b9f83c9b46180ac3f566036ff SHA256 d9132987efaf4a456374a4fc7fd8812c48804d5c4cd3a123f9473e5f297186e1
+EBUILD batik-1.7.ebuild 2285 RMD160 36635d2bb6f4df1e00502c95a523c9a5a7915d86 SHA1 bbc1a813d3ba52bf86cca77e79b3150c8cb2a66b SHA256 3816debed6f9ceacac0bea67fb238a717863af88d2a868f430e25262eab90018
+MISC ChangeLog 7576 RMD160 92157cee768250276d0d4c50c31492e9b4929252 SHA1 5ef7b53968d8db13652ad9bd8c5fe89b8fd7dcae SHA256 3100c6b56bb27551b2cfcd0cd9ba2a0e32821f513f0dcd10b23ddf31cfe15c6f
 MISC metadata.xml 374 RMD160 6d3a700a3b332f27c8e9057336d0cf3a28f59cf1 SHA1 5626acb9b3091acbf59b8d69c0ba46f525ee0ce5 SHA256 f71a7581f22225196ad493f9f6c85e5379e3a62f482059827ae35ab66b834437
